[package]
name = "flypad"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced", features = [
    "tokio",
], rev = "148fc77b8fbe0c8ad9b85428aa4c3bdac80c4b19" }
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
