[package]
name = "flypad"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
iced = { version = "0.14.0-dev", git = "https://github.com/iced-rs/iced", features = [
    "tokio",
], rev = "47f0d5bae4198e471cf913898b1f7102193ba399" }
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
